--- a/webserver/rlnwebportal/static/css/base.css
+++ b/webserver/rlnwebportal/static/css/base.css
@@ -1,1 +1,20 @@
-#mapid { height: 500px; width: 500px }
+#mapid {
+	height: 84vh;
+	max-width: 100%;
+}
+
+.notif{
+	position: absolute !important;
+	bottom: 1vw;
+	right: 1vw;
+	border-radius: 5px;
+}
+.loading{
+	margin-bottom: 0 !important;
+    bottom: 0px !important;
+    left: 0px !important;
+    width: 100%;
+    height: 5px !important;
+    position: absolute;
+    border-radius: 5px;
+}
