--- a/webserver/rlnwebportal/main/templates/main/home.html
+++ b/webserver/rlnwebportal/main/templates/main/home.html
@@ -291,8 +291,9 @@
 					showAlert(1, "Status updated successfully!")
 				}
 				msg = {"update": value, "id": id};
-				selfUpdateJSON = JSON.stringify(msg)
-				MQTTsend(selfUpdateJSON);
+				json = JSON.stringify(msg);
+				selfUpdateJSON = json;
+				MQTTsend(json);
 			}
 		});
 	}
